--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch app.js",
-    "start": "node app.js"
+    "dev": "node --watch app.js"
   },
   "keywords": [],
   "author": "",
